[tool.poetry]
name = "turtlestack"
version = "0.3.0"
description = "Source code for the turtlestack Python package."
authors = ["John McLevey"]
license = "MIT"
readme = "README.md"
homepage = "https://www.johnmclevey.com"
repository = "https://github.com/mclevey/beach/turtlestack"
documentation = "https://github.com/mclevey/beach/turtlestack"

[tool.poetry.dependencies]
chardet = "^5.2.0"
fastexcel = "^0.13.0"
html5lib = "^1.1"
ipykernel = "^6.29.5"
itables = "^2.3.0"
jupyter = "^1.1.1"
lxml = "^5.3.1"
matplotlib = "^3.10.1"
msoffcrypto-tool = "^5.4.2"
networkx = "^3.4.2"
openpyxl = ">=3.1.5,<4.0.0"
pandas = "^2.2.2"
pdpp = "^0.5.1"
pyjanitor = "^0.31.0"
pyprojroot = "^0.3.0"
pyth = "^0.6.0"
python = "<3.13,>=3.11"
python-docx = "^1.1.2"
python-json-logger = "^3.3.0"
pyyaml = "^6.0.2"
seaborn = "^0.13.2"
striprtf = "^0.0.28"
tabulate = "^0.9.0"
# spacy = "^3.8.3"
# torch = "^2.6.0"
# transformers = "^4.50.3"
# recordlinkage = "^0.16"
# arviz = "^0.20.0"
# bambi = "^0.15.0"
# pymc = "^5.20.1"
scikit-learn = "^1.6.1"
boto3 = "^1.38.22"
requests = "^2.32.3"


[tool.poetry.group.jupyter.dependencies]
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
jupyter-cache = "^1.0.1"

[tool.black]
line-length = 79


[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
